tests/verify/expected_fn.stderr
error: expected `fn`
 --> $DIR/expected_fn.rs:4:20
  |
4 | #[shorthand(verify(ffn = "Self::verify_field"))]
  |                    ^^^
